# MuiltiCamCalibration

./: CMakeLists.txt  README.md
config/: setting_config.yaml
include/: MuiltiCamCalibration.h
lib/: libyaml-cpp.so.0.7.0
record_data/multi_cam_rgb_data/: CMakeLists.txt  package.xml
record_data/multi_cam_rgb_data/src/: gain_data_node.cpp
result/: calibrate_result.yaml
src/: MuiltiCamCalibration.cpp
